; ModuleID = '/home/carl/AnghaBench/git/extr_revision.c_commit_stack_clear.c'
source_filename = "/home/carl/AnghaBench/git/extr_revision.c_commit_stack_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.commit_stack = type { i64, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.commit_stack*)* @commit_stack_clear to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @commit_stack_clear(%struct.commit_stack* %0) #0 {
  %2 = alloca %struct.commit_stack*, align 8
  store %struct.commit_stack* %0, %struct.commit_stack** %2, align 8
  %3 = load %struct.commit_stack*, %struct.commit_stack** %2, align 8
  %4 = getelementptr inbounds %struct.commit_stack, %struct.commit_stack* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 8
  %6 = call i32 @FREE_AND_NULL(i32 %5)
  %7 = load %struct.commit_stack*, %struct.commit_stack** %2, align 8
  %8 = getelementptr inbounds %struct.commit_stack, %struct.commit_stack* %7, i32 0, i32 0
  store i64 0, i64* %8, align 8
  %9 = load %struct.commit_stack*, %struct.commit_stack** %2, align 8
  %10 = getelementptr inbounds %struct.commit_stack, %struct.commit_stack* %9, i32 0, i32 1
  store i64 0, i64* %10, align 8
  ret void
}

declare dso_local i32 @FREE_AND_NULL(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
